fix: dashboard stretch and failure to update status on logout

--- a/src/application/assets/styles/index.scss
+++ b/src/application/assets/styles/index.scss
@@ -6,11 +6,6 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 
-body{
-	font-family: Ubuntu, Roboto, sans-serif;
-	background: $color-light-grey;
-}
-
 .btn{
 	padding: 0.5rem 1rem;
 }
